2009-04-17  Todd Zullinger  <tmz@pobox.com>

	Patch from: Author: Greg Carroll <iskimj@gmail.com>

	* data/gtkpod.glade
	  src/mp3file.c
	  src/prefs.c
	  src/prefsdlg.c:
	  Add preferences for handling ReplayGain.

	  This adds two preference settings, replaygain_offset and
	  replaygain_mode_album_priority.  The first is a simple
	  offset value that is added to the ReplayGain value before
	  being converted to a Soundcheck value and stored in the
	  iTunesDB.  The other setting allows a choice between
	  Audiofile (aka album) gain and Radio (aka track) gain.

2009-04-17  Todd Zullinger  <tmz@pobox.com>

	* src/mp3file.c:
	  Add support for reading ReplayGain data in common ID3 tags.
	  The order of preference for ReplayGain data is now ID3, APE,
	  and lastly the LAME tag.

2009-04-17  Todd Zullinger  <tmz@pobox.com>

	Patch from: Tino Keitel

	* src/mp3file.c:
	  Prefer Audiophile (Album) over Radio (Track) gain.

	  Adjust the ordering of the tags checked.  We now check the APE
	  tag first, because if a user has set it they likely would want
	  to use that value instead of the one added automatically by
	  Lame at encode time.

	  Also resets GainData struct in mp3_get_track_ape_replaygain(),
	  so that we don't end up using some mix of data from the LAME
	  Tag and the APE tag for ReplayGain.

2009-04-17  Paul Richardson <phantom_sf at users.sourceforge.net>

	* Reverted src/mp3file.c and configure.in due to lack of released
	  taglib support. Branched existing code to branches/taglib-branch

2009-04-16  David Kohen <dudyk at users.sourceforge.net>

	* src/mp3file.c: added taglib support
	* configure.in: added tests and include for TagLib

2009-04-16  Daniele Forsi <dforsi at users.sourceforge.net>

	* data/gtkpod.glade: Fix Gtk-WARNING on GtkSpinButtons

2009-04-12  Todd Zullinger  <tmz@pobox.com>

	* src/mp3file.c: Define a convenient debug macro

	* src/repository.c: Fix entry widget names for Create